Updates from Overleaf

--- a/main.tex
+++ b/main.tex
@@ -42,7 +42,13 @@ Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod 
 \floatingbox{This is a custom box that you can use to place some information that you consider as important to highlight or for information that doesn't really fit into the current context but that is important to add still.}
 
 \floatingbox[R][.5\textwidth]{\textbf{Hint:} You can also make this text box smaller and let text wrap around it. This might be useful for providing small bits of information.}
-At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet.   
+At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet.
+
+\begin{figure}
+    \centering
+    \includegraphics[width=\textwidth]{example-image-a}
+    \captionLink{https://www.youtube.com/watch?v=dQw4w9WgXcQ}{The link to the left is clickable, which is nice for theses where you want to link to videos or to other data that is hard to display as a figure in 2D.\label{fig:enter-label}}
+\end{figure}
 
 \bibliographystyle{abbrvnat}
 \bibliography{bibliography}
