--- a/layout/settings.tex
+++ b/layout/settings.tex
@@ -18,7 +18,7 @@
 \tcbuselibrary{skins}
 
 % Define citation color
-\definecolor{citblue}{HTML}{2d576b}
+\definecolor{citeblue}{HTML}{2d576b}
 
 % Define TUM corporate design colors
 % Taken from http://portal.mytum.de/corporatedesign/index_print/vorlagen/index_farben
@@ -68,15 +68,105 @@
 \let\oldcitet\citet
 \renewcommand{\citet}[1]{%
     \citeauthor{#1}%
-    \ \textcolor{citblue}{[\citeyear{#1}]}%
+    \ \textcolor{citeblue}{[\citeyear{#1}]}%
 }
 
 % Redefine \citep command
 \let\oldcitep\citep
 \renewcommand{\citep}[1]{%
-    \textcolor{citblue}{\oldcitep{#1}}%
+    \textcolor{citeblue}{\oldcitep{#1}}%
 }
 
 % Define norm and abs for convenience
 \newcommand\norm[1]{\left\lVert#1\right\rVert}
 \newcommand\abs[1]{\left\lvert#1\right\rvert}
+
+% Define new caption command with url
+\makeatletter
+\newcommand{\captionLink}[2]{%
+  {
+    %\renewcommand{\thefigure}{\arabic{figure}}
+    \renewcommand{\@makecaption}[2]{%
+        \vskip\abovecaptionskip
+        \sbox\@tempboxa{\textcolor{citeblue}{\href{#1}{\underline{##1}}}: ##2}%
+        \ifdim \wd\@tempboxa >\hsize
+            \textcolor{citeblue}{\href{#1}{\underline{##1}}}: ##2\par
+        \else
+            \global \@minipagefalse
+            \hb@xt@\hsize{\hfil\box\@tempboxa\hfil}%
+        \fi
+        \vskip\belowcaptionskip}%
+    \caption{#2}%
+  }
+}
+\makeatother
+
+\makeatletter
+\let\save@mathaccent\mathaccent
+\newcommand*\if@single[3]{%
+  \setbox0\hbox{${\mathaccent"0362{#1}}^H$}%
+  \setbox2\hbox{${\mathaccent"0362{\kern0pt#1}}^H$}%
+  \ifdim\ht0=\ht2 #3\else #2\fi
+  }
+%The bar will be moved to the right by a half of \macc@kerna, which is computed by amsmath:
+\newcommand*\rel@kern[1]{\kern#1\dimexpr\macc@kerna}
+%If there's a superscript following the bar, then no negative kern may follow the bar;
+%an additional {} makes sure that the superscript is high enough in this case:
+\newcommand*\widebar[1]{\@ifnextchar^{{\wide@bar{#1}{0}}}{\wide@bar{#1}{1}}}
+%Use a separate algorithm for single symbols:
+\newcommand*\wide@bar[2]{\if@single{#1}{\wide@bar@{#1}{#2}{1}}{\wide@bar@{#1}{#2}{2}}}
+\newcommand*\wide@bar@[3]{%
+  \begingroup
+  \def\mathaccent##1##2{%
+%Enable nesting of accents:
+    \let\mathaccent\save@mathaccent
+%If there's more than a single symbol, use the first character instead (see below):
+    \if#32 \let\macc@nucleus\first@char \fi
+%Determine the italic correction:
+    \setbox\z@\hbox{$\macc@style{\macc@nucleus}_{}$}%
+    \setbox\tw@\hbox{$\macc@style{\macc@nucleus}{}_{}$}%
+    \dimen@\wd\tw@
+    \advance\dimen@-\wd\z@
+%Now \dimen@ is the italic correction of the symbol.
+    \divide\dimen@ 3
+    \@tempdima\wd\tw@
+    \advance\@tempdima-\scriptspace
+%Now \@tempdima is the width of the symbol.
+    \divide\@tempdima 10
+    \advance\dimen@-\@tempdima
+%Now \dimen@ = (italic correction / 3) - (Breite / 10)
+    \ifdim\dimen@>\z@ \dimen@0pt\fi
+%The bar will be shortened in the case \dimen@<0 !
+    \rel@kern{0.6}\kern-\dimen@
+    \if#31
+      \overline{\rel@kern{-0.6}\kern\dimen@\macc@nucleus\rel@kern{0.4}\kern\dimen@}%
+      \advance\dimen@0.4\dimexpr\macc@kerna
+%Place the combined final kern (-\dimen@) if it is >0 or if a superscript follows:
+      \let\final@kern#2%
+      \ifdim\dimen@<\z@ \let\final@kern1\fi
+      \if\final@kern1 \kern-\dimen@\fi
+    \else
+      \overline{\rel@kern{-0.6}\kern\dimen@#1}%
+    \fi
+  }%
+  \macc@depth\@ne
+  \let\math@bgroup\@empty \let\math@egroup\macc@set@skewchar
+  \mathsurround\z@ \frozen@everymath{\mathgroup\macc@group\relax}%
+  \macc@set@skewchar\relax
+  \let\mathaccentV\macc@nested@a
+%The following initialises \macc@kerna and calls \mathaccent:
+  \if#31
+    \macc@nested@a\relax111{#1}%
+  \else
+%If the argument consists of more than one symbol, and if the first token is
+%a letter, use that letter for the computations:
+    \def\gobble@till@marker##1\endmarker{}%
+    \futurelet\first@char\gobble@till@marker#1\endmarker
+    \ifcat\noexpand\first@char A\else
+      \def\first@char{}%
+    \fi
+    \macc@nested@a\relax111{\first@char}%
+  \fi
+  \endgroup
+}
+\makeatother
